# novel-scan-agent

./: .editorconfig  .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  DEEPSEEK_START_HERE.md  README.md
.claude/: loop.md
.github/workflows/: android-scaffold.yml  ci.yml
apps/client/: README.md  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
apps/client/e2e/: responsive.spec.ts
apps/client/src/: App.css  App.tsx  demo-data.ts  domain.ts  index.css
apps/client/src/__tests__/: EvidencePanel.test.tsx  accessibilityColors.test.ts  demo-data.test.ts  domain.test.ts  importCapabilities.test.ts  nativeBridge.test.ts
apps/client/src/components/: BottomNav.css  BottomNav.tsx  EvidencePanel.css  EvidencePanel.tsx  HitCard.css  HitCard.tsx  ImportPanel.css  ImportPanel.tsx  RuleSelector.css  RuleSelector.tsx  ScanProgress.css  ScanProgress.tsx  SettingsPanel.css  SettingsPanel.tsx  Sidebar.css  Sidebar.tsx  Workspace.css  Workspace.tsx
apps/client/src/hooks/: useAppState.ts
apps/client/src/services/: importBooks.ts  importCapabilities.ts  rulePackSummary.ts  scanService.ts
apps/desktop/: README.md  package-lock.json  package.json
apps/desktop/scripts/: frontend.mjs  generate-icons.mjs  validate-capability.mjs  validate-migration.mjs
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/desktop/src-tauri/capabilities/: main-local.json
apps/desktop/src-tauri/migrations/: 0001_initial.sql
apps/desktop/src-tauri/permissions/: .gitignore
apps/desktop/src-tauri/src/: lib.rs  main.rs  persistence.rs  provider_commands.rs  scan_commands.rs
apps/desktop/src-tauri/src/secrets/: android.rs  memory.rs  mod.rs  windows.rs
crates/novel-core/: Cargo.toml  README.md
crates/novel-core/src/: compression.rs  context_view.rs  lib.rs  model.rs  persistence.rs  provider.rs  rules.rs  scanner.rs  source.rs
crates/novel-core/tests/: recovery_matrix.rs
crates/novel-import/: Cargo.toml  README.md
crates/novel-import/src/: archive.rs  capability.rs  docx.rs  encoding.rs  epub.rs  error.rs  html.rs  lib.rs  markdown.rs  model.rs  pdf.rs  plain_text.rs
crates/novel-providers/: Cargo.toml
crates/novel-providers/src/: anthropic.rs  config.rs  credential.rs  http.rs  lib.rs  openai_compat.rs  prompt.rs  redaction.rs  registry.rs  retry.rs  schema.rs  secret.rs  security.rs
crates/novel-providers/tests/: deepseek_contract.rs
crates/novel-rulepack/: Cargo.toml
crates/novel-rulepack/src/: lib.rs
crates/novel-rulepack/tests/: seed_pack_test.rs
docs/: ANDROID_BUILD.md  ARCHITECTURE.md  PROJECT_PLAN.md  ROADMAP.md
docs/deepseek-runbook/: 00_EXECUTION_CONTRACT.md  01_CURRENT_STATE.md  02_TASK_LEDGER.md  03_BLOCKERS_AND_DEBT.md  04_COMMANDS_AND_ENVIRONMENT.md  05_RECOVERY_AUDIT.md  10_S1_CLOSEOUT.md  20_S2_MULTI_FORMAT_IMPORT.md  30_S3_SCAN_CONTEXT.md  40_S4_MODEL_BYOK.md  50_S5_COMMUNITY_RULES.md  60_S6_WINDOWS_ANDROID.md  70_S7_RELEASE.md  80_ACCEPTANCE_MATRIX.md  90_FINAL_HANDOFF.md  README.md  validate-ledger.mjs
