[workspace]
resolver = "2"
members = [
  "crates/novel-core",
  "crates/novel-import",
  "crates/novel-rulepack",
  "apps/desktop/src-tauri",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.85"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"
unwrap_used = "warn"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true

