[package]
name = "novel-core"
version = "0.1.0"
edition = "2021"
description = "Platform-neutral scanning core for traceable novel content reviews"
publish = false

[dependencies]
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
serde_json = "1.0"
tokio = { version = "1", features = ["rt", "macros"] }
