[package]
name = "novel-import"
version = "0.1.0"
edition = "2021"
description = "Format detection, capability reporting, and source-preserving novel import contracts"
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
encoding_rs = "0.8"
zip = { version = "2", default-features = false, features = ["deflate"] }
quick-xml = "0.37"

