[package]
name = "novel-providers"
version = "0.1.0"
edition = "2021"
description = "Multi-provider adapter registry for the novel scan agent"
publish = false

[dependencies]
novel-core = { path = "../novel-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
tokio = { version = "1", features = ["rt", "time", "macros"] }
zeroize = { version = "1", features = ["zeroize_derive"] }
