[package]
name = "novel-scout-desktop"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Tauri 2 shell for the Novel Scout Windows and Android clients"
publish = false

[lib]
name = "novel_scout_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
novel-core = { path = "../../../crates/novel-core" }
novel-import = { path = "../../../crates/novel-import" }
novel-rulepack = { path = "../../../crates/novel-rulepack" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
rusqlite = { version = "0.31", features = ["bundled"] }

[lints]
workspace = true
